...
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EditTextUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#C3C0C0"
...
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/EditTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
...
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextUsername" />

    <Button
        android:id="@+id/ButtonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="Register"
...
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11">

        <RadioButton
                android:id="@+id/radioButtonPurple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Purple Theme" />

        <RadioButton
                android:id="@+id/radioButtonPink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pink Theme" />

        <RadioButton
                android:id="@+id/radioButtonRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Red Theme" />

    </RadioGroup>

...
